--- a/css/style.css
+++ b/css/style.css
@@ -22,3 +22,103 @@ body {
     font-family: 'Open Sans', sans-serif;
     font-family: 'Raleway', sans-serif;
 }
+.page-header {
+    height: 70px;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    box-shadow: 0px 3px 6px #00000029;
+    display: flex;
+    align-items: center;
+}
+
+.page-header-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.page-logo {
+    font: normal normal 300 32px/37px Raleway;
+    color: var(--color-primary);
+    text-decoration: none;
+}
+
+.page-nav-list {
+     display: flex;
+ }
+.page-nav-list li {
+    margin-left: 20px;
+}
+.page-nav-list a {
+    text-transform: uppercase;
+    text-decoration: none;
+    font: normal normal bold 11px/15px Open Sans;
+    letter-spacing: 3.28px;
+    color: var(--color-grey);
+    border: solid 3px transparent;
+    padding: 25px 15px 25px 15px;
+}
+.page-nav-list a:hover {
+    color: var(--color-black);
+    border: solid 3px transparent;
+    border-bottom-color: var(--color-primary);
+}
+
+.banner {
+    height: 842px;
+
+    background-image: url(../images/Background.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: bottom;
+
+    display: flex;
+    justify-items: left;
+    align-items: center;
+    flex-direction: column;
+}
+
+.banner-title {
+    text-align: center;
+    font: normal normal normal 49px/57px Raleway;
+    color: var(--color-black);
+    padding-top: 130px;
+    padding-bottom: 20px;
+}
+
+.banner-text {
+    text-align: center;
+    font: normal normal normal 16px/22px Open Sans;
+    color: var(--color-black);
+}
+
+.banner-link {
+    text-align: center;
+    font: normal normal bold 16px/22px Open Sans;
+    color: var(--color-white);
+    text-decoration: none;
+    padding: 22px 157px 22px 157px;
+    margin-top: 38px;
+    background-color: var(--color-primary);
+    border-radius: 50px;
+}
+
+.section1 {
+    height: 531px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: left;
+}
+
+.section1-title {
+    text-align: center;
+    font: normal normal normal 36px/42px Raleway;
+    color: var(--color-black);
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
+.section1-content {
+    display: flex;
+    justify-content: space-between;
+}
