--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,4 +8,5 @@
 @import "elements/section1";
 @import "elements/benefits";
 @import "elements/pricing";
-@import "elements/contact";
+// @import "elements/contact";
+@import "elements/calculator";
